force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/FNS_SFDCFFDCConnection__mdt.object-meta.xml
<CustomObject>
    <label>SFDC-FFDC Connection</label>
    <pluralLabel>FNS_SFDCFFDCConnection</pluralLabel>
</CustomObject>