force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_AccessToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessToken__c</fullName>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>