force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_AccessTokenURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessTokenURL__c</fullName>
    <label>Access Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>