force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_AccessTokenValidityTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessTokenValidityTime__c</fullName>
    <label>Access Token Validity Time</label>
    <type>DateTime</type>
</CustomField>