force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_AuthorizationURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_AuthorizationURL__c</fullName>
    <label>Authorization URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>