force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConsumerKey__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>