force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConsumerSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>