force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_EndPointURL__c</fullName>
    <label>EndPoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>