force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_Error__c.field-meta.xml
<CustomField>
    <fullName>FNS_Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>