force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_IsAdminUser__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsAdminUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin User</label>
    <type>Checkbox</type>
</CustomField>