force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_IsValidRefreshToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsValidRefreshToken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid RefreshToken</label>
    <type>Checkbox</type>
</CustomField>