force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>FNS_RedirectURI__c</fullName>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>