force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>