force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_RefreshTokenValidityTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_RefreshTokenValidityTime__c</fullName>
    <label>Refresh Token Validity Time</label>
    <type>DateTime</type>
</CustomField>