force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_Scope__c.field-meta.xml
<CustomField>
    <fullName>FNS_Scope__c</fullName>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>