force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_UserExternalID__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserExternalID__c</fullName>
    <label>User ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>