force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/fields/FNS_UserName__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserName__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>