force-app/main/default/objects/FNS_SFDCFFDCConnection__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FNS_AccessToken__c</columns>
    <columns>FNS_AccessTokenValidityTime__c</columns>
    <columns>FNS_RefreshToken__c</columns>
    <columns>FNS_RefreshTokenValidityTime__c</columns>
    <columns>FNS_Scope__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>